--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -44,7 +44,7 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: K2P
+        TNAME: K2P-usb
         KERNEL: 3.4
       run: |
         cd /opt/rt-n56u/trunk
@@ -61,5 +61,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: K2P
+        name: K2P-usb
         path: /opt/images
